package com.foxmindedjavaspring.model;

public enum StudentState {
    ACTIVE, TERMINATED, ABSOLVENT
}
